--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Remota - v0.6.0</title>
-	<meta name="description" content="Documentation for Remota - v0.6.0">
+	<title>Remota - v0.6.1</title>
+	<meta name="description" content="Documentation for Remota - v0.6.1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<script async src="assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">Remota - v0.6.0</a>
+					<a href="index.html" class="title">Remota - v0.6.1</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -50,7 +50,7 @@
 	</div>
 	<div class="tsd-page-title">
 		<div class="container">
-			<h1>Remota - v0.6.0</h1>
+			<h1>Remota - v0.6.1</h1>
 		</div>
 	</div>
 </header>
@@ -97,8 +97,7 @@
 				<a href="#api" id="api" style="color: inherit; text-decoration: none;">
 					<h2>API</h2>
 				</a>
-				<p>The following methods are used in the most simple set-ups and will already be integrated with the default UI. Check our TypeScript documentation
-				for more details if you want to create a custom UI.</p>
+				<p>The following methods are used in the most simple set-ups and will already be integrated with the default UI. Check our <a href="https://concordalabs.github.io/remota">TypeScript documentation</a> in case you need to have access to other APIs (useful for custom UIs).</p>
 				<a href="#oncontrolchangeprompt-user--gt---" id="oncontrolchangeprompt-user--gt---" style="color: inherit; text-decoration: none;">
 					<h3>.onControlChangePrompt(({ user }) =&gt; { ... })</h3>
 				</a>
