--- a/classes/default.html
+++ b/classes/default.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>default | Remota - v0.7.0</title>
-	<meta name="description" content="Documentation for Remota - v0.7.0">
+	<title>default | Remota - v0.8.0</title>
+	<meta name="description" content="Documentation for Remota - v0.8.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">Remota - v0.7.0</a>
+					<a href="../index.html" class="title">Remota - v0.8.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">Remota - v0.7.0</a>
+					<a href="../modules.html">Remota - v0.8.0</a>
 				</li>
 				<li>
 					<a href="default.html">default</a>
@@ -86,7 +86,6 @@
 						<section class="tsd-index-section ">
 							<h3>Methods</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="default.html#agent" class="tsd-kind-icon">agent</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-static"><a href="default.html#host" class="tsd-kind-icon">host</a></li>
 							</ul>
 						</section>
@@ -113,35 +112,6 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Methods</h2>
 				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
-					<a name="agent" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagStatic">Static</span> agent</h3>
-					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">agent<span class="tsd-signature-symbol">(</span>config<span class="tsd-signature-symbol">: </span><a href="../modules.html#clientconfig" class="tsd-signature-type" data-tsd-kind="Type alias">ClientConfig</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="manager.manager-1.html" class="tsd-signature-type" data-tsd-kind="Class">Manager</a></li>
-					</ul>
-					<ul class="tsd-descriptions">
-						<li class="tsd-description">
-							<aside class="tsd-sources">
-								<ul>
-									<li>Defined in <a href="https://github.com/concordalabs/remota/blob/9fd23b1/src/index.ts#L105">src/index.ts:105</a></li>
-								</ul>
-							</aside>
-							<div class="tsd-comment tsd-typography">
-								<div class="lead">
-									<p>Starts a Remota session in the agent browser (usually through remota.xyz), which is going to
-									be the peer supporting the host user.</p>
-								</div>
-							</div>
-							<h4 class="tsd-parameters-title">Parameters</h4>
-							<ul class="tsd-parameters">
-								<li>
-									<h5>config: <a href="../modules.html#clientconfig" class="tsd-signature-type" data-tsd-kind="Type alias">ClientConfig</a></h5>
-								</li>
-							</ul>
-							<h4 class="tsd-returns-title">Returns <a href="manager.manager-1.html" class="tsd-signature-type" data-tsd-kind="Class">Manager</a></h4>
-						</li>
-					</ul>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-static">
 					<a name="host" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> host</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
@@ -151,12 +121,12 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/concordalabs/remota/blob/9fd23b1/src/index.ts#L112">src/index.ts:112</a></li>
+									<li>Defined in <a href="https://github.com/concordalabs/remota/blob/16c9490/src/index.ts#L120">src/index.ts:120</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Starts a Remota session in your user browser, which is going to be the session host</p>
+									<p>Starts a Remota session in your user&#39;s browser, which is going to be the session host</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -188,9 +158,6 @@
 						<ul>
 							<li class=" tsd-kind-constructor tsd-parent-kind-class">
 								<a href="default.html#constructor" class="tsd-kind-icon">constructor</a>
-							</li>
-							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
-								<a href="default.html#agent" class="tsd-kind-icon">agent</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class tsd-is-static">
 								<a href="default.html#host" class="tsd-kind-icon">host</a>
